--- a/ebooks.html
+++ b/ebooks.html
@@ -84,6 +84,9 @@ a:hover {
                         <a href="data/The First Course in Linear Algebra.pdf" target="_blank">A First Course in Linear Algebra</a>
                     </li>
                     <li>
+                        <a href="https://open.umn.edu/opentextbooks/subjects/mathematics" target="_blank">Open Textbook Library</a>
+                    </li>
+                    <li>
                         <a href="https://sites.google.com/gotvdsb.ca/sedig/math-textbooks?authuser=0" target="_blank">Grade 5 and Grade 6 Online Books</a>
                     </li>
                     <li>
