--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Mathematics Resources</title>
     <meta name="keywords" content="mathresources"/>
-    <meta property="og:title" content="Free Mathematical Resources">
+    <meta property="og:title" content="Math-And-Science-Resources">
     <meta property="og:description" content="Learn and practice math and Sceince for free.">
     <meta property="og:image" content="data/Math-Icon.png">
     <meta property="og:url" content="https://abdullah-ameen.github.io/Math-And-Science-Resources/">
