--- a/ebooks.html
+++ b/ebooks.html
@@ -81,7 +81,7 @@ a:hover {
                         <a href="https://www.calcchat.com/" target="_blank">Easy Access Study Guide</a>
                     </li>
                     <li>
-                        <a href="data/The First Course in Linear Algebra.pdf" target="_blank">A First Course in Linear Algebra</a>
+                        <a href="https://open.umn.edu/opentextbooks/textbooks/5" target="_blank">A First Course in Linear Algebra</a>
                     </li>
                     <li>
                         <a href="https://open.umn.edu/opentextbooks/subjects/mathematics" target="_blank">Open Textbook Library</a>
@@ -90,7 +90,7 @@ a:hover {
                         <a href="https://sites.google.com/gotvdsb.ca/sedig/math-textbooks?authuser=0" target="_blank">Grade 5 and Grade 6 Online Books</a>
                     </li>
                     <li>
-                        <a href="data/Fundamentals of Physics.pdf" target="_blank">Fundamentals of Physics</a>  &nbsp | &nbsp <a href="https://nibmehub.com/site/">Source</a>
+                        <a href="https://archive.org/details/fundamentals-of-physics/page/n7/mode/2up" target="_blank">Fundamentals of Physics</a>
                     </li>
                     </li>
 
