--- a/ebooks.html
+++ b/ebooks.html
@@ -96,11 +96,8 @@ a:hover {
 
                 </div><br><br><br><br>
 
-                <p style="color: white; text-align: center; font-style: italic;">Some of these books were downloaded through online research, and if you have any questions or comments, please reach out to the sources provided above.</p>
+                <p style="color: white; text-align: center; font-style: italic;"> For any questions about the e-books linked above, please contact the sources listed.</p>
             </div>
-            
-
-
         </div> 
     </div>
 </body>
