--- a/terms.html
+++ b/terms.html
@@ -32,7 +32,7 @@
 <body>
   <div class="container">
     <div class="animated-frame">
-      <h3 style="text-align: center;">Terms of Service</h3>
+      <h3 style="text-align: center;">Terms of Use</h3>
       <p>The resources listed on this page are provided by third-party websites, and the included links will redirect you to their respective platforms. 
         Please note that the author of this resource page is not responsible for the content, functionality, or any issues that may arise from their use. 
         Users are encouraged to review each site's terms and policies before engaging with their materials.</p> <br> Thank You! <br> <br>
