--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Mathematics Resources</title>
     <meta name="keywords" content="mathresources"/>
-    <meta property="og:title" content="Math-And-Science-Resources">
+    <meta property="og:title" content="Free Mathematical Resources">
     <meta property="og:description" content="Learn and practice math and Sceince for free.">
     <meta property="og:image" content="data/Math-Icon.png">
-    <meta property="og:url" content="https://abdullah-ameen.github.io/Math-And-Science-Resources/">
+    <meta property="og:url" content="https://abdullah-ameen.github.io/FreeMathematicsResources/">
     <meta name="twitter:card" content="summary_large_image">
     <link href="css/styels.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -361,43 +361,81 @@
             </div>
         </div>
 
-    </div> <br><br>
+    </div> <br>
+    <hr>
 
-    <div class="container" style="text-align:center;">
+<div class="container" style="text-align:center;" id="automationsection">
+
+        <h3>Math Calculators and Automation</h3><br>
+        <p style="text-align: left; padding: 15px; background:rgb(39, 1, 1); color: white; border-radius: 15px;">
+            Looking for a quick and easy way to solve complex calculations? In this section, you will find a collection of 
+            free mathematical calculators and powerful automation tools that I have developed over the past few months. Whether you need to simplify equations, 
+            speed up problem-solving, or explore automated math solutions, 
+            these tools are here to help. Give them a try what problem are you trying to solve today?</p>
         <div class="row">
-          <div class="col-lg-12">
-            <div class="mathcauses">
+          <div class="col-lg-4">
+            <div class="automationsection">
                 <div class="Calculators">
-                    <h5 style="text-align: center; color: rgb(34, 106, 241);">Solving the Quadratic Equation</h5>
+                    <h5>Solving the Quadratic Equation</h5>
                     <p>Using the below button, you can access three calculators that I have developed for factoring and solving quadratic equations. 
                        These tools are designed to assist you in quickly finding solutions, whether you're verifying your own work or tackling 
                        equations that might be challenging to solve manually. By leveraging these calculators, you can streamline your problem-solving 
-                       process and gain confidence in your mathematical accuracy.
+                       process and gain confidence in your mathematical accuracy. A great way to check for your quadratic equation answers or to factor it.
                     </p>
-                    <ul style="list-style: none; padding: 0;">
-                        <li>
-                            <button class="bigball b17">
-                                <a href="equations.html" target="_blank" style="color: white;"> Calculators</a>
-                            </button>
-                        </li>
-                    </ul>
+                        <button class="bigball b17">
+                            <a href="equations.html" target="_blank" style="color: white;"> <span style="font-size: 15px;">Quadratic Calculators</span></a>
+                        </button><br>
                 </div> 
             </div>
-            <br><br>
-            <h6>If you have comment, suggestion or recommendation for improving this resource page, please do not hesitate to contact me by clicking the Contact tab down below. <br><br> Thank you!</h6><br>
           </div>
-        </div>
-    </div>
 
+          <div class="col-lg-4">
+            <div class="automationsection">
+                <h5>Desmos-Graphing Calculators</h5>
+                <p>
+                    Desmos is a powerful and user-friendly online graphing calculator designed to help students, teachers, 
+                    and math enthusiasts visualize and explore mathematical concepts. It offers a wide range of tools, including 
+                    function graphing, equation solving, and interactive math activities. With its intuitive interface, Desmos makes 
+                    it easy to plot equations, analyze data, and experiment with different mathematical models—all for free! Whether you solving Algebra
+                    problems or exploring math concepts, Desmos is a great resource.  
+                </p>
+                <button class="bigball b18">
+                    <a href="https://www.desmos.com/" target="_blank" style="color: white;"> Desmos</a>
+                </button><br>
+            </div>
+          </div>
+            
+          <div class="col-lg-4">
+            <div class="automationsection">
+                <h5>Wolfram Alpha</h5>
+                <p>
+                    Wolfram Alpha is an advanced computational engine that can solve equations, perform symbolic calculations, 
+                    generate step-by-step solutions, and automate various mathematical processes. Unlike traditional calculators, 
+                    it understands natural language queries, making it easy to input complex problems. Whether you need help with 
+                    algebra, calculus, statistics, applied math, Wolfram Alpha provides instant, AI-powered solutions, 
+                    making it a powerful tool for students, educators, and professionals.
+                </p>
+                <button class="bigball b19">
+                    <a href="https://www.wolframalpha.com/" target="_blank" style="color: white;"> Wolfram Alpha</a>
+                </button><br>
+            </div>
+          </div>
+
+        </div>
+        <br><br>
+            <h6>If you have comment, suggestion or recommendation for improving this resource page, please do not hesitate to contact me by clicking the Contact tab down below. <br><br> Thank you!</h6><br>
+</div>  
+    
     <div class="container" style="text-align:right; padding-left:200px;">
         <div class="row">
-          <div class="col-lg-15">
+          <div class="col-lg-12">
             <a href="#top"><img src="data/BackToMainPage.png" style="width:64px;height:90px;border-radius:20px; float: right;"></a>
           </div>
         </div>
     </div><br>
 
-</div>
+
+
 
       <!-- Footer -->
       <footer class="footer mt-auto py-3 footerbackground" style="text-align: center; width: 100%;">
