--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="practicingACT.html" target="_blank">Practice ACT</a>
                 </li> &nbsp; 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="equations.html" target="_blank">Calculators</a>
+                    <a class="nav-link active" aria-current="page" href="#automationsection" target="_blank">Automation</a>
                 </li> &nbsp;
 
                 <li class="nav-item">
@@ -361,7 +361,7 @@
             </div>
         </div>
 
-    </div> <br>
+    </div> <br><br>
     <hr>
 
 <div class="container" style="text-align:center;" id="automationsection">
