--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     </div>
 </nav>
 
-<div class="container" style="text-align:center;">
-    <img src="data/pyicon.png" alt="" height="160" width="130">
-</div>
+<div class="container" style="text-align:center; margin-top: 20px;">
+    <img src="data/pyicon1.png" alt="" height="150" width="230">
+</div> <br><br>
 
 <div class="container">
     <div class="row">
@@ -79,8 +79,10 @@
              <li> Do you want to take your math skills to the next level?</li>
              <li> Are you an indoor person and need help with your math problems?</li>
             </ul>
-            If you answered yes to any of the above questions, then this free resource page is for you.<br> But first thing first, let's make one thing clear that we are all good at math,
-            no one is bad at math. The myths like "I am bad at math" can only strengthen your math anxiety. <br> Enjoy practicing math as math is all about practicing.</p><br>
+            If you answered yes to any of the above questions, then you’re in the right place! This free Math and Science resources page is here to help. 
+            But let’s get one thing straight—everyone has the ability to be good at math! The idea that 'I’m bad at math' is just a myth that only fuels math anxiety. 
+            The secret? Math is all about practice. So dive in, explore, and enjoy the process—because the more you practice, the better you get!
+            </p><br>
         </div>
         </div>
     </div>
