--- a/index.html
+++ b/index.html
@@ -365,8 +365,9 @@
 
     </div> <br><br>
     <hr>
+    <div id="automationsection"></div>    
 
-<div class="container" style="text-align:center;" id="automationsection">
+<div class="container" style="text-align:center;">
 
         <h3>Math Calculators and Automation</h3><br>
         <p style="text-align: left; padding: 15px; background:rgb(39, 1, 1); color: white; border-radius: 15px;">
