--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,10 @@
     .btn-submit:hover {
       background-color: #0056b3;
     }
+    .labels{
+      font-size: 18px;
+      color: black;
+    }
   </style>
 </head>
 <body>
@@ -89,15 +93,15 @@
       <div class="contact-form">
         <form action="https://formspree.io/f/xpwqoqjd" method="POST">
           <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name" class="labels">Name</label>
             <input type="text" id="name" name="name" class="form-control" required>
           </div>
           <div class="form-group">
-            <label for="email">Email</label>
+            <label for="email" class="labels">Email</label>
             <input type="email" id="email" name="email" class="form-control" required>
           </div>
           <div class="form-group">
-            <label for="message">Message</label>
+            <label for="message" class="labels">Message</label>
             <textarea id="message" name="message" class="form-control" rows="5" required></textarea>
           </div>
           <button type="submit" class="btn-submit">Send</button>
