--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     Spanish, Korean, Deutsch, Chinese, Greek and Polski. Click on the below icon to learn more.
 
                     <button class="ball b14">
-                        <a href="https://www.ck12.org/student/" target="_blank"style="font-size:15px;">CK - 12</a>
+                        <a href="https://www.ck12.org/student/" target="_blank"style="font-size:15px;">CK-12</a>
                      </button>
 
                 </p1>
@@ -446,8 +446,8 @@
         <div>
  
           <span class="text-muted">
-            <a href="contact.html" target="_blank">Contact</a> | 
-            <a href="terms.html" target="_blank">Terms of Use</a><br><p></p> <br>
+            <a href="contact.html" target="_blank"><span style="color:white;">Contact</span></a> | 
+            <a href="terms.html" target="_blank"><span style="color:white;"> Terms of Use </span> </a><br><p></p> <br>
             <div class="contact-icons">
                 <a href="https://www.facebook.com/AbdullahAmeenn/" target="_blank" data-toggle="tooltip" title="Find me on facebook!">
                   <img src="data/email.png" alt="Email Icon" class="contact-icon">
