--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                   <img src="data/linkedin.png" alt="LinkedIn Icon" class="contact-icon">
                 </a> &nbsp;&nbsp;
                 <a href="https://twitter.com/AbdullahAmeenn?lang=en" target="_blank" data-toggle="tooltip" title="Find me on X">
-                  <img src="data/twitter.png" alt="Twitter Icon" class="contact-icon1">
+                  <img src="data/twitter.png" alt="Twitter Icon" class="contact-icon1" style="width:25px, height:25px; border-radius:25px">
                 </a>
               </div> <br>
             <p style="text-align: center; color: rgb(255, 255, 255); font-size: 13px;">Copyright &copy;
