--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </nav>
 
 <div class="container" style="text-align:center; margin-top: 20px;">
-    <img src="data/pyicon1.png" alt="" height="130" width="190">
+    <img src="data/navbarbackgroundimage.png" alt="" height="150" width="490" class="navbarunderimage">
 </div> <br><br>
 
 <div class="container">
