--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     </div>
 </nav>
 
-<div class="container" style="text-align:center; margin-top: 20px;">
-    <img src="data/navbarbackgroundimage.png" alt="" height="150" width="490" class="navbarunderimage">
+<div class="container-fluid" style="text-align:center; margin-top: 20px;">
+    <img src="data/navbarbackgroundimage.png" alt="" height="160" width="440" class="navbarunderimage">
 </div> <br><br>
 
 <div class="container">
